  * View per-thread core usage of process.
  * Support threads on Linux, FreeBSD, OpenBSD and DragonFlyBSD.
  * Process argument parsing refinements.
  * Code refactoring of process and thread query API.
  * Fix memory leaks.
  * UI alignments and improvements.
  * Massive rearrangement of the source tree.
  * Indicate process list sorting.
  * Fix swap calculation on macOS.
  * Add an about window.

============
Evisum 0.4.1
============

  * Fix intl support for some Linux distributions.
  * Improve the search responsiveness.
  * Improve window resize behaviour.
  * Fix process arguments on FreeBSD/DragonFlyBSD.
  * Fix command-line parsing of Linux processes.
  * Introduce some transition animations.
  * Small refactor.

============
Evisum 0.4.0
============

   * Use a generic list for process listing (pretty).
   * Add process menu.
   * Set application priority (nice).
   * UI improvements.
   * Offer kvm_openfiles means of obtaining PID list on
     FreeBSD-based platforms. This requires specific
     permissions (s+g kmem). We fallback if that fails.
     use a genlist (meh).
   * Save settings upon exit. Sorting and window size.
   * Reduce object creation and deletion.
   * Improve display of memory and storage sizes.
   * Use object caching where applicable.
   * Remove redundant code.
   * FreeBSD et al. Get process arguments akin to Linux.
   * macOS improvements for process information.
   * Process command-line (new field).
   * Added translation support (with French and Italian).
   * Other stuff.

============
Evisum 0.3.2
============

   * Add new icon. This works better with our
     existing applications. It has a retro
     feel.

============
Evisum 0.3.1
============

   * Fix OpenBSD process init.

============
Evisum 0.3.0
============

   * Fix UI alignment.
   * Add search to UI.
   * General tidying.
   * Fix rare crash.
   * Fix some calculations.
   * Linux process information improvements.
   * OpenBSD specific fixes.